--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+  <script src="/javascripts/scripts.js"></script>
 </head>
 
 <body>
@@ -28,13 +29,17 @@
           <li><a href="/about" class="nav-link px-2 text-white">About</a></li>
         </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          {{#if user}}
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="#" class="nav-link px-2 text-white">Logged in as
+                {{user.name}}</a></li>
+          </ul>
+          {{else}}
+          <button type="button" class="btn btn-outline-light me-2" onclick="goToLogin()">Login</button>
+          <button type="button" class="btn btn-warning" onclick="goToSignup()">Sign-up</button>
+          {{/if}}
         </div>
       </div>
     </div>
