Fix some part of auth

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,8 +33,15 @@
         <div class="text-end">
           {{#if user}}
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-white">Logged in as
-                {{user.name}}</a></li>
+            <li class="dropdown">
+              <a href="#" class="nav-link px-2 text-white" type="button" id="dropdownMenu" data-bs-toggle="dropdown"
+                aria-expanded="false">Logged in as
+                {{user.name}} <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                <li><a href="/dashboard" class="nav-link px-2 text-secondary">Dashboard</a></li>
+                <li><a href="/logout" class="nav-link px-2 text-secondary">Logout</a></li>
+              </ul>
+            </li>
           </ul>
           {{else}}
           <button type="button" class="btn btn-outline-light me-2" onclick="goToLogin()">Login</button>
