--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,6 +2,12 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form class="form-signin" method="post">
+                
+                {{#each errorMessages}}
+                <div class="alert alert-danger" role="alert">
+                    {{this.msg}}
+                </div>
+                {{/each}}
                 <h1 class="text-center">Please login to your account</h1>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email address</label>
