Setup ability to create rooms & codemirror & chat function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,10 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+{{#if user}}
+
+<a href="/createTask" class="btn btn-outline-warning">
+Create task 
+</a>
+
+{{/if}}
