--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,13 +2,25 @@
 <html>
 
 <head>
+
   <title>{{title}}</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css"
+    integrity="sha512-MuQ5YVObESwaNmTSvc7PR10diprLYCgGNWlsMDJfJeZrOU2UlG4SvLRQ339Eskk05lyLAJDhhAep/tcwtWZaRA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/theme/monokai.min.css"
+    integrity="sha512-2uSPRCImJyOXlUrtm1zTk3xrC47ghhm9cioJkuRqUhu9cWg2j4abtSViRDzBdHJaObkl+OH/9SY+IRTOyp7/DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/javascripts/scripts.js"></script>
 </head>
 
